Closed
Bug 734384
Opened 11 years ago
Closed 11 years ago
Trunk build fails, complaining with "nsMsgDBFolder.cpp:179:88: error: no matching function for call to ‘NS_RegisterStaticAtoms(const nsStaticAtom [21], unsigned int)’"
Categories
(Thunderbird :: General, defect)
Thunderbird
General
Tracking
(Not tracked)
VERIFIED
FIXED
Thunderbird 13.0
People
(Reporter: mconley, Assigned: mconley)
References
Details
Attachments
(1 file)
527 bytes,
patch
|
Details | Diff | Splinter Review |
Trunk builds are failing with: /buildbot/linux-comm-central-build/build/mailnews/base/util/nsMsgDBFolder.cpp: In constructor ‘nsMsgDBFolder::nsMsgDBFolder()’: /buildbot/linux-comm-central-build/build/mailnews/base/util/nsMsgDBFolder.cpp:179:88: error: no matching function for call to ‘NS_RegisterStaticAtoms(const nsStaticAtom [21], unsigned int)’ NEXT ERROR make[6]: *** [nsMsgDBFolder.o] Error 1 make[6]: Leaving directory `/buildbot/linux-comm-central-build/build/objdir-tb/mailnews/base/util' NEXT ERROR make[5]: *** [util_libs] Error 2 I'm pretty sure Bug 696242 is the cause.
Assignee | ||
Comment 1•11 years ago
|
||
Already committed with r=bustage-fix, but for bookkeeping, here's the patch I put up anyhow. Committed to comm-central as http://hg.mozilla.org/comm-central/rev/164813226897
Assignee: nobody → mconley
Status: NEW → ASSIGNED
Assignee | ||
Updated•11 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 13.0
Comment 2•11 years ago
|
||
V.Fixed
Severity: critical → blocker
Status: RESOLVED → VERIFIED
Flags: in-testsuite-
Hardware: x86 → All
You need to log in
before you can comment on or make changes to this bug.
Description
•