Bug 734384 - Bustage fix for fallout from Bug 696242. Update NS_RegisterStaticAtoms to only take one parameter. r=bustage-fix.